--- a/gateway/Vagrantfile
+++ b/gateway/Vagrantfile
@@ -1,5 +1,9 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "phusion/ubuntu-14.04-amd64"
-  config.vm.provision :shell, path: "vagrant/install-docker.sh"
-  config.vm.provision :shell, path: "vagrant/bootstrap.sh"
+  config.vm.network "public_network"
+  config.vm.network "forwarded_port", guest: 80, host: 80
+  config.vm.network "forwarded_port", guest: 5672, host: 5672
+  config.vm.network "forwarded_port", guest: 15672, host: 15672
+  config.vm.network "forwarded_port", guest: 25672, host: 25672
+  config.vm.provision :shell, path: "scripts/bootstrap.sh"
 end
