feat: update host Dockerfile to use dn from dhttp

--- a/host/Dockerfile
+++ b/host/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:6.11
 MAINTAINER Adam K Dean <akd@dadi.co>
 
-RUN mkdir -p /var/dhttp/host
-WORKDIR /var/dhttp/host
+RUN mkdir -p /var/dn/host
+WORKDIR /var/dn/host
 
 COPY src .
 RUN npm install -q
