feat: update gateway Dockerfile to use dn from dhttp

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:6.11
 MAINTAINER Adam K Dean <akd@dadi.co>
 
-RUN mkdir -p /var/dhttp/gateway
-WORKDIR /var/dhttp/gateway
+RUN mkdir -p /var/dn/gateway
+WORKDIR /var/dn/gateway
 
 COPY src .
 RUN npm install -q
