feat: update control Dockerfile to use dn from dhttp

--- a/control/Dockerfile
+++ b/control/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:6.11
 MAINTAINER Adam K Dean <akd@dadi.co>
 
-RUN mkdir -p /var/dhttp/control
-WORKDIR /var/dhttp/control
+RUN mkdir -p /var/dn/control
+WORKDIR /var/dn/control
 
 COPY src .
 RUN npm install -q
