--- a/control/src/package.json
+++ b/control/src/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "amqplib": "^0.5.1",
+    "async": "^2.6.0",
+    "body-parser": "^1.18.2",
     "convict": "^4.0.1",
     "express": "^4.16.2",
+    "moment": "^2.19.1",
+    "pad": "^2.0.3",
+    "redis": "^2.8.0",
     "slugify": "^1.2.1",
     "uuid": "^3.1.0"
   }
