--- a/gateway/src/package.json
+++ b/gateway/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dn-gateway",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "",
   "main": "server.js",
   "author": "Adam K Dean <akd@dadi.co>",
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "amqplib": "^0.5.1",
+    "async": "^2.6.0",
     "convict": "^4.0.1",
     "express": "^4.16.2",
+    "redis": "^2.8.0",
     "slugify": "^1.2.1",
     "uuid": "^3.1.0"
   }
