--- a/apps/hello-world/App.config
+++ b/apps/hello-world/App.config
@@ -13,4 +13,4 @@
 # hello-world example app config file
 #
 APP_NAME      hello-world
-APP_HOSTNAME  hello-world.akd.sh
+APP_HOSTNAME  hello-world.dispersed.network
