--- a/apps/blog/src/package.json
+++ b/apps/blog/src/package.json
@@ -1,14 +1,8 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "",
+  "name": "@dadi/web-boilerplate",
   "main": "server.js",
-  "author": "Adam K Dean <akd@dadi.co>",
-  "license": "ISC",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "express": "^4.16.2"
+    "@dadi/web": "4.x",
+    "@dadi/web-dustjs": "^1.1.1"
   }
 }
