--- a/host/src/package.json
+++ b/host/src/package.json
@@ -13,6 +13,8 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "request": "^2.83.0",
-    "slugify": "^1.2.1"
+    "slugify": "^1.2.1",
+    "stream-buffers": "^3.0.1",
+    "through2": "^2.0.3"
   }
 }
