fix: rename cdn public -> assets

--- a/apps/dadi/cdn/src/config/config.development.json
+++ b/apps/dadi/cdn/src/config/config.development.json
@@ -20,7 +20,7 @@
   "assets": {
     "directory": {
       "enabled": true,
-      "path": "./public"
+      "path": "./assets"
     },
     "s3": {
       "enabled": false
