fix: make Dockerfile great again

--- a/apps/dadi/api/Dockerfile
+++ b/apps/dadi/api/Dockerfile
@@ -4,7 +4,9 @@ MAINTAINER Adam K Dean <akd@dadi.co>
 RUN mkdir -p /var/api
 WORKDIR /var/api
 
-COPY src .
+COPY src/package.json .
 RUN npm install -q
+
+COPY src .
 
 CMD ["npm", "start"]
